<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Posts</item>
        <item>Login</item>
        <item>About</item>
    </string-array>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="query">Query</string>
    <string name="results">%1$s Results</string>
    <string name="page">Page %1$s / %2$s</string>
    <string name="unable_to_display_data">Unable to display data</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="tags">Tags</string>
    <string name="filebroker">filebroker</string>
    <string name="welcome">Welcome, you are signed in as %1$s</string>
    <string name="logout">Logout</string>
    <string name="filebroker_description">Filebroker %1$s</string>
    <string name="filebroker_platform">Platform: %1$s</string>
</resources>