<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/queryInputPosts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/query"
                android:inputType="text" />

            <Button
                android:id="@+id/searchButtonPosts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results" />

            <TextView
                android:id="@+id/pageNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/page" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paginationButtonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" />

        <GridView
            android:id="@+id/imageGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnWidth="100dp"
            android:gravity="center"
            android:minHeight="90dp"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" />

    </LinearLayout>

    <include layout="@layout/progress_spinner_overlay" />

</FrameLayout>